test/parser/Queries/syntax_errors/fail_K-ForExprPositionalVar-1.xq
(:** eq ****** where ** where *********foo******** let * let ********* for *****foo******* let ***:)
(: Test: K-ForExprPositionalVar-1   where    foo  $                    for :)
 for (: Written by: Frans Englich       where    foo                    eq :)
:Date: 2006-10-05T18:29:37+02:00   eq                      :)
( for : Purpose: Variable which  let  not in fooscope.         eq      :)foo
 eq (:********************* $ ***** ne * where ************ for **** $ * where ***** eq **:)
for  at $p in (1, 2) return 1, $p